--- a/scss/_site-nav.scss
+++ b/scss/_site-nav.scss
@@ -1,88 +1,90 @@
 /* Site Nav - Site-Specific Navigation */
 
-.site-nav {
-	background-color: $white;
-	position: relative;
-	padding: 0;
-}
+.site-sub-nav {
+  position: relative;
+  padding: 0;
+  background-color: $white;
 
-.site-nav-label {
-	padding-left: 10px;
-	font-size: 1rem;
-}
+  .navbar {
+    padding: 0;
+  }
 
-.navbar-toggler {
-	outline: none;
-}
+  .site-nav-label {
+    padding-left: 10px;
+    font-size: 1rem;
+  }
 
-#siteSpecificNavigation .nav-link {
-	padding: 0.75rem 1rem;	
-}
+  .navbar-toggler {
+    outline: none;
+  }
 
-#siteSpecificNavigation ul li .dropdown-menu {
-	border-radius: 0;
-	margin-top: 0;
-	border: 0;
-	border-color: $gray-300;
-	border-bottom: 3px solid $gray-500;
-	padding-bottom: 0;
-	padding-top: 0;
-	box-shadow: $box-shadow-sm;	
-}
+  .site-sub-navbar {
+    .nav-link {
+      padding: 0.75rem 1rem;
+    }
 
-#siteSpecificNavigation .dropdown-menu .dropdown-item a {
-	padding: 0.5rem 1rem;	
-}
+    .dropdown-menu {
+      padding-top: 0;
+      padding-bottom: 0;
+      margin-top: 0;
+      border: 0;
+      border-color: $gray-300;
+      border-bottom: 3px solid $gray-500;
+      border-radius: 0;
+      box-shadow: $box-shadow-sm;
+    }
 
-#siteSpecificNavigation .nav-item.active {
-	background: $gray-200;
-}
+    .dropdown-item {
+      padding: 0.5rem 1rem;
+    }
 
+    .nav-item.active {
+      background-color: $gray-200;
+    }
+  }
 
-@include media-breakpoint-down(sm) {
-	
-	.site-nav {
-		padding: 0.5rem 0; 
-	}
-	
-	#siteSpecificNavigation {
-		position: absolute;
-		top: 54px;
-		background: $white;
-		width: 100%;
-		box-shadow: $box-shadow-sm;
-		border-bottom: 3px solid $gray-500;
-	}
-	
-	#siteSpecificNavigation .nav-link {
-		padding: 0.5rem 1rem;	
-	}
-	
-	.site-nav button {
-		margin: 0 10px;
-		width: 100%;
-	}
-	
-	#siteSpecificNavigation ul {
-		padding: 10px;	
-	}
-	
-	#siteSpecificNavigation ul li .dropdown-menu {
-		border: 0;
-		box-shadow: none;
-		padding: 0 0 0 1rem;
-		background: $white;
-	}
-	
-	#navbarDropdown {
-		box-shadow: 0!important;
-	}
-	
-	#siteSpecificNavigation .dropdown-menu .dropdown-item {
-		padding: .5rem 1rem;
-	}
-	
-	#siteSpecificNavigation .dropdown-menu .dropdown-item:hover {
-		background: none;
-	}
+  @include media-breakpoint-down(sm) {
+    padding: 0.5rem 0;
+
+    button {
+      width: 100%;
+      margin: 0 10px;
+    }
+
+    .site-sub-navbar {
+      position: absolute;
+      top: 54px;
+      width: 100%;
+      background-color: $white;
+      border-bottom: 3px solid $gray-500;
+      box-shadow: $box-shadow-sm;
+
+      .dropdown > .nav-link.dropdown-toggle {
+        box-shadow: 0 !important;
+      }
+
+      .nav-link {
+        padding: 0.5rem 1rem;
+      }
+
+      ul {
+        padding: 10px;
+      }
+
+      .dropdown-menu {
+        padding: 0 0 0 1rem;
+        background-color: $white;
+        border: 0;
+        box-shadow: none;
+      }
+
+      .dropdown-menu .dropdown-item {
+        padding: 0.5rem 1rem;
+      }
+
+      .dropdown-menu .dropdown-item:hover {
+        background: none;
+      }
+    }
+  }
 }
